fudanbot_ws/log/build_2024-12-11_16-20-30/motor_driver/stdout_stderr.log
running egg_info
writing ../../build/motor_driver/motor_driver.egg-info/PKG-INFO
writing dependency_links to ../../build/motor_driver/motor_driver.egg-info/dependency_links.txt
writing entry points to ../../build/motor_driver/motor_driver.egg-info/entry_points.txt
writing requirements to ../../build/motor_driver/motor_driver.egg-info/requires.txt
writing top-level names to ../../build/motor_driver/motor_driver.egg-info/top_level.txt
reading manifest file '../../build/motor_driver/motor_driver.egg-info/SOURCES.txt'
writing manifest file '../../build/motor_driver/motor_driver.egg-info/SOURCES.txt'
running build
running build_py
copying motor_driver/motor_driver.py -> /home/desu/fudanbot_ws/build/motor_driver/build/lib/motor_driver
running install
running install_lib
copying /home/desu/fudanbot_ws/build/motor_driver/build/lib/motor_driver/motor_driver.py -> /home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver
byte-compiling /home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver/motor_driver.py to motor_driver.cpython-310.pyc
running install_data
  File "/home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver/motor_driver.py", line 30
    self.get_logger().info('I heard: "%s %s"' % msg.linear, %msg.angular)
                                                            ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/motor_driver/motor_driver.egg-info to /home/desu/fudanbot_ws/install/motor_driver/lib/python3.10/site-packages/motor_driver-0.0.0-py3.10.egg-info
running install_scripts
Installing motor_driver script to /home/desu/fudanbot_ws/install/motor_driver/lib/motor_driver
writing list of installed files to '/home/desu/fudanbot_ws/build/motor_driver/install.log'
